Switch to using ewatercycle importable config

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ffe02400",
+   "id": "873f8f1e",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "006c5341",
+   "id": "a4ff56c5",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6484eaa6",
+   "id": "da2a0e6d",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22ae4f0d",
+   "id": "38552b03",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f41e68",
+   "id": "a9893495",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "58ea2613",
+   "id": "802cff6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c9672253",
+   "id": "74e9e532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "217e58f1",
+   "id": "687e892a",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-3-60da212f06f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/ewatercycle/ewatercycle/ewatercycle/models/wflow.py\u001b[0m in \u001b[0;36mparameters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    132\u001b[0m         \u001b[0;34m\"\"\"List the configurable parameters for this model.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cfg\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m             raise NotImplementedError(\n\u001b[0m\u001b[1;32m    135\u001b[0m                 \u001b[0;34m\"No default parameters available for wflow. To see the \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m                 \"parameters, first run setup with a valid .ini file.\")\n",
+      "\u001b[0;32m~/ewatercycle/ewatercycle/ewatercycle/models/wflow.py\u001b[0m in \u001b[0;36mparameters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0;34m\"\"\"List the configurable parameters for this model.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cfg\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m             raise NotImplementedError(\n\u001b[0m\u001b[1;32m    126\u001b[0m                 \u001b[0;34m\"No default parameters available for wflow. To see the \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m                 \"parameters, first run setup with a valid .ini file.\")\n",
       "\u001b[0;31mNotImplementedError\u001b[0m: No default parameters available for wflow. To see the parameters, first run setup with a valid .ini file."
      ]
     }
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ee58a953",
+   "id": "3b8d709a",
    "metadata": {
     "tags": []
    },
@@ -123,9 +123,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working directory created: wflow_20210415_151309\n",
-      "Created /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151309/wflow_ewatercycle.ini.\n",
-      "Started wflow container with working directory /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151309\n"
+      "Working directory created: /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912\n",
+      "Created /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912/wflow_ewatercycle.ini.\n",
+      "Started wflow container with working directory /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912\n"
      ]
     }
    ],
@@ -141,14 +141,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9d8dc170",
+   "id": "8e03e958",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151309/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151309'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912'))"
       ]
      },
      "execution_count": 5,
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18efcb28",
+   "id": "73cd1cdc",
    "metadata": {},
    "source": [
     "The `config_file` that is returned by `setup(...)` can be used to initialize the model:"
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9ec7cec8",
+   "id": "689437d9",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e5374e",
+   "id": "471b6758",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -350,13 +350,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c0d276aa",
+   "id": "105b7fd3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151309/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912/wflow_ewatercycle.ini')"
       ]
      },
      "execution_count": 7,
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "359beda3",
+   "id": "40f6ffba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9212e661",
+   "id": "3c425d1b",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ce5869ab",
+   "id": "e3a4f86b",
    "metadata": {
     "tags": []
    },
@@ -775,13 +775,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1995-01-30 00:00:00\n",
        "Attributes:\n",
-       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-13d5fd2a-942a-497e-8338-f57019adbcfb' class='xr-array-in' type='checkbox' checked><label for='section-13d5fd2a-942a-497e-8338-f57019adbcfb' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-92cc9843-357a-49a5-a7ba-e8359935a010' class='xr-array-in' type='checkbox' checked><label for='section-92cc9843-357a-49a5-a7ba-e8359935a010' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-548fc02d-4a02-4432-b066-d27bd2fab745' class='xr-section-summary-in' type='checkbox'  checked><label for='section-548fc02d-4a02-4432-b066-d27bd2fab745' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-ace1baa8-55b0-4e5c-9588-aede58e0ff98' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-ace1baa8-55b0-4e5c-9588-aede58e0ff98' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-095d48f4-b62a-444d-837a-db9ed7b7511d' class='xr-var-data-in' type='checkbox'><label for='data-095d48f4-b62a-444d-837a-db9ed7b7511d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-49278e27-9e8e-4850-93ca-34907c3141cd' class='xr-section-summary-in' type='checkbox'  checked><label for='section-49278e27-9e8e-4850-93ca-34907c3141cd' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-62f4757b-bf5d-475b-a1d7-40588f8ed1dd' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-62f4757b-bf5d-475b-a1d7-40588f8ed1dd' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-9f24b328-e383-4f07-afd9-f6f0e51fa405' class='xr-var-data-in' type='checkbox'><label for='data-9f24b328-e383-4f07-afd9-f6f0e51fa405' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -812,7 +812,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-99011426-ac49-46d7-9f12-cae15c5b49e7' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-99011426-ac49-46d7-9f12-cae15c5b49e7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-cf5352d9-4791-4a26-b7f4-69c90026cca2' class='xr-var-data-in' type='checkbox'><label for='data-cf5352d9-4791-4a26-b7f4-69c90026cca2' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-3c1dc2fd-0b68-42d4-9cd4-21593e6aeef6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3c1dc2fd-0b68-42d4-9cd4-21593e6aeef6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5dd3088f-f862-4112-901e-aea4c9888c96' class='xr-var-data-in' type='checkbox'><label for='data-5dd3088f-f862-4112-901e-aea4c9888c96' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -840,7 +840,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-d100bc3f-e98c-4bd0-a7ae-d15a916483ef' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d100bc3f-e98c-4bd0-a7ae-d15a916483ef' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-9a9aca38-6d8e-4b64-a252-5aabbfeef083' class='xr-var-data-in' type='checkbox'><label for='data-9a9aca38-6d8e-4b64-a252-5aabbfeef083' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-35a2dc23-8998-439a-972a-9cd869373d4f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-35a2dc23-8998-439a-972a-9cd869373d4f' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-cc8397b0-c73e-43f9-8caa-8c064ab35456' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-cc8397b0-c73e-43f9-8caa-8c064ab35456' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-706d4fa9-6613-4b5a-aa8d-33fb1f4e4c1c' class='xr-var-data-in' type='checkbox'><label for='data-706d4fa9-6613-4b5a-aa8d-33fb1f4e4c1c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d630b49a-9e3e-46b9-b6d6-4447248b8d42' class='xr-section-summary-in' type='checkbox'  checked><label for='section-d630b49a-9e3e-46b9-b6d6-4447248b8d42' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7fa6e25d",
+   "id": "bbf446b2",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "739cbe70",
+   "id": "027d9036",
    "metadata": {},
    "outputs": [
     {
@@ -941,13 +941,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "300b49b3",
+   "id": "43da3fef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fb95816fee0>"
+       "<matplotlib.collections.QuadMesh at 0x7f2a9535a2e0>"
       ]
      },
      "execution_count": 13,
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5b095e5b",
+   "id": "54952a7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d5e39b2a",
+   "id": "883d1156",
    "metadata": {},
    "outputs": [],
    "source": [
