change comment about fill values

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "873f8f1e",
+   "id": "efe86f57",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4ff56c5",
+   "id": "db980d5d",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da2a0e6d",
+   "id": "a0da8f0c",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38552b03",
+   "id": "1265ae48",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9893495",
+   "id": "813d5e3c",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "802cff6b",
+   "id": "21fede55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "74e9e532",
+   "id": "0a6ba86a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "687e892a",
+   "id": "f23be3bf",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3b8d709a",
+   "id": "21254968",
    "metadata": {
     "tags": []
    },
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e03e958",
+   "id": "594e353f",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73cd1cdc",
+   "id": "ca227c42",
    "metadata": {},
    "source": [
     "The `config_file` that is returned by `setup(...)` can be used to initialize the model:"
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "689437d9",
+   "id": "5bfdb164",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471b6758",
+   "id": "302e7fdb",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "105b7fd3",
+   "id": "e4afa09b",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "40f6ffba",
+   "id": "6165cea9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3c425d1b",
+   "id": "dadbffba",
    "metadata": {},
    "outputs": [
     {
@@ -397,13 +397,13 @@
     }
    ],
    "source": [
-    "model.get_value(\"RiverRunoff\")"
+    "model.get_value(\"RiverRunoff\")  # WFlow interally uses a fill-value for masked data of -999"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e3a4f86b",
+   "id": "b689c7cb",
    "metadata": {
     "tags": []
    },
@@ -870,30 +870,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "bbf446b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-999.])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "model.bmi.get_value_at_indices(\"RiverRunoff\", np.array([100]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "027d9036",
+   "id": "a5534765",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "43da3fef",
+   "id": "70247969",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "54952a7e",
+   "id": "6e743881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "883d1156",
+   "id": "6a8a8800",
    "metadata": {},
    "outputs": [],
    "source": [
