--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7df922c",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7a758137",
    "metadata": {},
    "outputs": [
     {
@@ -36,16 +34,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4e7c15",
    "metadata": {},
    "source": [
-    "## Run lisflood class"
+    "## Run lisflood class\n",
+    "\n",
+    "The ewatercycle configuration file is typcially stored in `~/ewatercycle/ewatercycle.yaml` or `/etc/ewatercycle.yaml` and can be imported with `from ewatercycle import CFG`. Relevant settings for lisflood are:\n",
+    "\n",
+    "- container_engine: docker # or singularity\n",
+    "- lisflood.singularity_images: 'ewatercycle-lisflood-grpc4bmi.sif'\n",
+    "- lisflood.docker_images: 'ewatercycle/lisflood-grpc4bmi:latest'\n",
+    "- output_dir: './' # the directory where the model work_dir will be created"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "627e6783",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca4a1983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba4f666d",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ff1c2384",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f64666a",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +131,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5086fc44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "10977aec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +151,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5f0562cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +161,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c321e43e",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "49de6af1",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +210,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e917800a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +220,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "792e9f8b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -249,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
