import CFG, use yaml code block, add  model.get_value_as_xarray and plot to the notebook

--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c1d35260",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -9,46 +10,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "f1d924ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
-      "  Thank you for trying out the new ESMValCore API.\n",
-      "  Note that this API is experimental and may be subject to change.\n",
-      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
-      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
-      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import numpy as np\n",
+    "from ewatercycle import CFG\n",
     "from ewatercycle.models import Lisflood\n",
     "from ewatercycle.models.lisflood import LisfloodParameterSet"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8f2f5a49",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
     "\n",
     "The ewatercycle configuration file is typcially stored in `~/ewatercycle/ewatercycle.yaml` or `/etc/ewatercycle.yaml` and can be imported with `from ewatercycle import CFG`. Relevant settings for lisflood are:\n",
     "\n",
-    "- container_engine: docker # or singularity\n",
-    "- lisflood.singularity_images: 'ewatercycle-lisflood-grpc4bmi.sif'\n",
-    "- lisflood.docker_images: 'ewatercycle/lisflood-grpc4bmi:latest'\n",
-    "- output_dir: './' # the directory where the model work_dir will be created"
+    "```Yaml\n",
+    "container_engine: docker # or singularity\n",
+    "lisflood.singularity_images: 'ewatercycle-lisflood-grpc4bmi.sif'\n",
+    "lisflood.docker_images: 'ewatercycle/lisflood-grpc4bmi:latest'\n",
+    "output_dir: './' # the directory where the model work_dir will be created\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "c1f74ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CFG.load_from_file('~/ewatercycle.yaml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d37400e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "0206224c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,39 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "7460516f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running ewatercycle-lisflood-grpc4bmi.sif singularity container on port 37255\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# setup model\n",
     "# lisflood_ERA-Interim_*_1990_1990.nc data can be copied \n",
     "# from /projects/0/wtrcycle/comparison/forcing/lisflood\n",
-    "FORCING_DIR = Path('forcing_data')\n",
-    "config_file, config_dir = model.setup(FORCING_DIR, parameterset)"
+    "forcing_dir = Path('forcing_data')\n",
+    "config_file, config_dir = model.setup(forcing_dir, parameterset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "686451a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210414_155718/lisflood_setting_1990_1990.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210414_155718\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(config_file)\n",
     "print(config_dir)"
@@ -112,17 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "6b5301b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Discharge',)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get metadata\n",
     "print(model.output_var_names)"
@@ -131,16 +114,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "566ddd4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# run lisvap\n",
-    "lisvap_results = model.run_lisvap(FORCING_DIR)"
+    "lisvap_results = model.run_lisvap(forcing_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "3e3b2e84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(lisvap_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7077bce3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "1450f939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,28 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "1b19604f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too many items (5400000) for single call, using multiple get_value_at_indices() with into chunks of 524280 items\n",
-      "Fetching value range 0 - 524280\n",
-      "Fetching value range 524280 - 1048560\n",
-      "Fetching value range 1048560 - 1572840\n",
-      "Fetching value range 1572840 - 2097120\n",
-      "Fetching value range 2097120 - 2621400\n",
-      "Fetching value range 2621400 - 3145680\n",
-      "Fetching value range 3145680 - 3669960\n",
-      "Fetching value range 3669960 - 4194240\n",
-      "Fetching value range 4194240 - 4718520\n",
-      "Fetching value range 4718520 - 5242800\n",
-      "Fetching value range 5242800 - 5400000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get value\n",
     "discharge = model.get_value('Discharge')"
@@ -189,27 +167,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "f72f37b0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3060"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.count_nonzero(~np.isnan(discharge))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "9b617a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discharge = model.get_value_as_xarray('Discharge')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb25dac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discharge.plot(robust=True, cmap='GnBu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79ef197a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d58bae5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -241,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
