remove import CFG

--- a/examples/preprocessing.ipynb
+++ b/examples/preprocessing.ipynb
@@ -23,18 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from esmvalcore.experimental import CFG\n",
+    "# forcing uses a esmvaltool config-user.yml file to find input ERA5 data.\n",
     "from ewatercycle import forcing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load config file\n",
-    "CFG.load_from_file('~/.esmvaltool/esmvaltool-config-user.yml')"
    ]
   },
   {
