--- a/examples/Irrigation.ipynb
+++ b/examples/Irrigation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6791438c",
+   "id": "18b66bf1",
    "metadata": {},
    "source": [
     "# Brute force irrigation experiment\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "56207a5a",
+   "id": "81571618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41b7afa9",
+   "id": "7a803561",
    "metadata": {},
    "source": [
     "We will run 2 versions of the same model:\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59c70a4f",
+   "id": "2c2e81ba",
    "metadata": {},
    "source": [
     "We will set up the models with identical parameters and settings. We will use a standard dataset with global parameters on 5 and 30 minutes resolution."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eda75114",
+   "id": "3d6dfa40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c728913a",
+   "id": "4a175256",
    "metadata": {},
    "source": [
     "In an earlier experiment we've established a river grid cell that corresponds closely to a GRDC station location. For now, we will use this index without further ado. Further down the notebook, we will show how we originally identified this point."
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f022b1f4",
+   "id": "e47fa6d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac3f0cb1",
+   "id": "ff40ed26",
    "metadata": {},
    "source": [
     "## Reference experiment\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "30a91120",
+   "id": "916454cf",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "18d23cff",
+   "id": "ddee852a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af6c622f",
+   "id": "501534ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e7c1ac28",
+   "id": "6a8f2f74",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eac9e6b1",
+   "id": "04e52898",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682a1ac6",
+   "id": "b6debfae",
    "metadata": {},
    "source": [
     "### Intermediate insights\n",
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "c900bf54",
+   "id": "be4eaeb8",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcdca5f8",
+   "id": "5440e72e",
    "metadata": {},
    "source": [
     "You can see that the model grid point we used is very close to the actual GRDC station, and indeed represents a cell that we would identify as a river. Below, we show how we identified that grid point. NB: this method is far from perfect, but is good enough for illustration. It only works after some spin-up time, which is why we couldn't do it before. "
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b7b2cada",
+   "id": "4fc7593c",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b30b1390",
+   "id": "372a2bd6",
    "metadata": {},
    "source": [
     "We can also have a quick look at the discharge timeseries we have tracked, to see if it makes any sense."
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9cab4aa3",
+   "id": "ab6c6125",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef600f4a",
+   "id": "efd0affc",
    "metadata": {},
    "source": [
     "## Running the irrigation experiment\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "058e7cc1",
+   "id": "442c69ea",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6fa763d",
+   "id": "9eb34970",
    "metadata": {},
    "source": [
     "From here on we will do exactly the same as before, except that we'll add three extra lines to overwrite soil moisture at every time step."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "cc2802f1",
+   "id": "5e683ce1",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "90dcd102",
+   "id": "fa87ac25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "07bbaf31",
+   "id": "f6d05f69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "9cf761b0",
+   "id": "c4ebe066",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d69205e1",
+   "id": "560a73de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a727f982",
+   "id": "2a797b77",
    "metadata": {},
    "source": [
     "## Final analysis"
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "d6a62f7e",
+   "id": "e56668b4",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e605888",
+   "id": "39572a67",
    "metadata": {},
    "source": [
     "## Clean up\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "84f45bb6",
+   "id": "bc20b48c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,8 +553,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0648bb75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d12c908e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "893161c1",
+   "id": "b8a7eb3d",
    "metadata": {},
    "source": [
     "# Bonus: tech paper case 2 (fluxnet update)"
@@ -562,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19368323",
+   "id": "7117dd89",
    "metadata": {},
    "source": [
     "This notebook is very similar to techpaper example case 2. The only change is that for that notebook, Fluxnet data is used to derive a more sophisticated update. Below I refactored the relevant code snipped from that notebook so that the techn paper notebook can easily be updated with this."
@@ -570,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0333648b",
+   "id": "e3aad71f",
    "metadata": {},
    "source": [
     "#### Original code snipped from tech paper notebook"
@@ -579,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00534f43",
+   "id": "1e3876a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "037183de",
+   "id": "39c8e8ad",
    "metadata": {},
    "source": [
     "#### Refactored code (not tested)"
@@ -647,8 +663,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2d8e0b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Determine a correction factor by comparing mean land surface evaporation to fluxnet evaporation\n",
+    "land_surface_evaporation = model.get_value_as_xarray('land_surface_evaporation')\n",
+    "time = land_surface_evaporation.time.values\n",
+    "correction_factor = fluxnetEvaporation[time] / land_surface_evaporation.mean()\n",
+    "\n",
+    "# Apply the correction factor to bare soil evaporation in the model\n",
+    "bare_soil_evaporation = model.get_value('bare_soil_evaporation')\n",
+    "corrected_bare_soil_evaporation = bare_soil_evaporation * correction_factor\n",
+    "correction_to_bare_soil_evaporation = corrected_bare_soil_evaporationabse - bare_soil_evaporation\n",
+    "\n",
+    "# Apply the same absolute correction to upper soil storage \n",
+    "upper_soil_storage = model.get_value('upper_soil_storage')\n",
+    "corrected_upper_soil_storage = upper_soil_storage - correction_to_bare_soil_evaporation # this was +, but I think it should be -\n",
+    "\n",
+    "# We must make sure not to exceed maximum storage\n",
+    "upper_soil_saturation_degree = model.get_value('upper_soil_saturation_degree')\n",
+    "maximum_upper_soil_storage =  (1 / upper_soil_saturation_degree) * upper_soil_storage\n",
+    "\n",
+    "@np.vectorize\n",
+    "def determine_channel_exchange(corrected_upper_soil_storage, maximum_upper_soil_storage):\n",
+    "    \"\"\"Determine final storage after exchanging excess or deficit with the channel.\"\"\"\n",
+    "    \n",
+    "    if  corrected_upper_soil_storage > maximum_upper_soil_storage:\n",
+    "        # excess water is added to the channel\n",
+    "        final_upper_soil_storage = maximum_upper_soil_storage\n",
+    "        channel_exchange = corrected_upper_soil_storage - maximum_upper_soil_storage\n",
+    "        \n",
+    "    elif corrected_upper_soil_storage < 0:\n",
+    "        # water deficit is taken from the channel\n",
+    "        final_upper_soil_storage = 0\n",
+    "        channel_exchange = corrected_upper_soil_storage\n",
+    "    \n",
+    "    else:\n",
+    "        final_upper_soil_storage = corrected_upper_soil_storage\n",
+    "        channel_exchange = 0\n",
+    "        \n",
+    "    return final_upper_soil_storage, channel_exchange\n",
+    "\n",
+    "final_upper_soil_storage, channel_exchange = determine_channel_exchange(corrected_upper_soil_storage, maximum_upper_soil_storage)\n",
+    "\n",
+    "channel_storage = model.get_value('channel_storage')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "0fe8f1a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fluxnetData = pd.read_csv('/mnt/home/user42/technicalPaperExampleNotebooks/notebooksToWorkOutSmallSteps/FLX_US-Ha1_FLUXNET2015_SUBSET_DD_1991-2012_1-4.csv') #Read fluxnet data from exel\n",
+    "fluxnetData['Datetime']=pd.to_datetime(fluxnetData['TIMESTAMP'],format='%Y%m%d')\n",
+    "fluxnetData = fluxnetData.set_index('Datetime')\n",
+    "\n",
+    "#Select evaporation measured as latent heat flux from fluxnetdata\n",
+    "#and rewrite evaporation from latent heat flux to m/day\n",
+    "fluxnetEvaporation = fluxnetData['LE_F_MDS'] / (2.43 * 1000000) * 6772 ** 2 / (3600 * 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 167,
-   "id": "011c9aab",
+   "id": "4c0baead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,25 +758,12 @@
     "    deficit = corrected_upper_soil_storage < 0\n",
     "\n",
     "    # Where there is an excess, water will be added to the channel\n",
-    "    channel_storage = channel_storage.where(~excess, other=corrected_upper_soil_storage - maximum_upper_soil_storage)\n",
+    "    channel_storage = channel_storage.where(~excess, other=channel_storage + (corrected_upper_soil_storage - maximum_upper_soil_storage))\n",
     "    corrected_upper_soil_storage = corrected_upper_soil_storage.where(~excess, other=maximum_upper_soil_storage)\n",
     "\n",
     "    # Where there is a deficit, water will be taken from the channel\n",
-    "    channel_storage = channel_storage.where(~deficit, other=corrected_upper_soil_storage - maximum_upper_soil_storage)\n",
+    "    channel_storage = channel_storage.where(~deficit, other=channel_storage + corrected_upper_soil_storage)\n",
     "    corrected_upper_soil_storage = corrected_upper_soil_storage.where(~deficit, other=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6b35c93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Now, this function can be called in the update loop:\n",
-    "while reference.time < reference.end_time:\n",
-    "    reference.update\n",
-    "    apply_fluxnet_correction(reference, fluxnet_evap)"
    ]
   }
  ],
