--- a/examples/preprocessing.ipynb
+++ b/examples/preprocessing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,14 +54,14 @@
       " 'max_parallel_tasks': 1,\n",
       " 'output_dir': PosixPath('/home/sarah/temp/output'),\n",
       " 'output_file_type': 'png',\n",
-      " 'plot_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210421_103459/plots'),\n",
-      " 'preproc_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc'),\n",
+      " 'plot_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210422_065437/plots'),\n",
+      " 'preproc_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc'),\n",
       " 'profile_diagnostic': False,\n",
       " 'remove_preproc_dir': True,\n",
       " 'rootpath': {'OBS6': [PosixPath('/home/sarah/temp/forcing')]},\n",
-      " 'run_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210421_103459/run'),\n",
+      " 'run_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210422_065437/run'),\n",
       " 'save_intermediary_cubes': False,\n",
-      " 'work_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210421_103459/work'),\n",
+      " 'work_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210422_065437/work'),\n",
       " 'write_netcdf': True,\n",
       " 'write_plots': True}\n",
       "Creating tasks from recipe\n",
@@ -71,53 +71,78 @@
       "Using input files for variable pr of dataset ERA5:\n",
       "/home/sarah/temp/forcing/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_pr_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/pr created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc/diagnostic_daily/pr/OBS6_ERA5_reanaly_1_day_pr_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc/diagnostic_daily/pr/OBS6_ERA5_reanaly_1_day_pr_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/tas\n",
       "Creating preprocessor 'daily_temperature' task for variable 'tas'\n",
       "Using input files for variable tas of dataset ERA5:\n",
       "/home/sarah/temp/forcing/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_tas_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/tas created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc/diagnostic_daily/tas/OBS6_ERA5_reanaly_1_day_tas_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc/diagnostic_daily/tas/OBS6_ERA5_reanaly_1_day_tas_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/tasmax\n",
       "Creating preprocessor 'daily_temperature' task for variable 'tasmax'\n",
       "Using input files for variable tasmax of dataset ERA5:\n",
       "/home/sarah/temp/forcing/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_tasmax_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/tasmax created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc/diagnostic_daily/tasmax/OBS6_ERA5_reanaly_1_day_tasmax_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc/diagnostic_daily/tasmax/OBS6_ERA5_reanaly_1_day_tasmax_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/tasmin\n",
       "Creating preprocessor 'daily_temperature' task for variable 'tasmin'\n",
       "Using input files for variable tasmin of dataset ERA5:\n",
       "/home/sarah/temp/forcing/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_tasmin_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/tasmin created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc/diagnostic_daily/tasmin/OBS6_ERA5_reanaly_1_day_tasmin_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc/diagnostic_daily/tasmin/OBS6_ERA5_reanaly_1_day_tasmin_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/tdps\n",
       "Creating preprocessor 'daily_temperature' task for variable 'tdps'\n",
       "Using input files for variable tdps of dataset ERA5:\n",
       "/home/sarah/temp/forcing/Tier3/ERA5/OBS6_ERA5_reanaly_1_Eday_tdps_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/tdps created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc/diagnostic_daily/tdps/OBS6_ERA5_reanaly_1_Eday_tdps_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc/diagnostic_daily/tdps/OBS6_ERA5_reanaly_1_Eday_tdps_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/uas\n",
       "Creating preprocessor 'daily_windspeed' task for variable 'uas'\n",
       "Using input files for variable uas of dataset ERA5:\n",
       "/home/sarah/temp/forcing/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_uas_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/uas created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc/diagnostic_daily/uas/OBS6_ERA5_reanaly_1_day_uas_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc/diagnostic_daily/uas/OBS6_ERA5_reanaly_1_day_uas_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/vas\n",
       "Creating preprocessor 'daily_windspeed' task for variable 'vas'\n",
       "Using input files for variable vas of dataset ERA5:\n",
       "/home/sarah/temp/forcing/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_vas_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/vas created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc/diagnostic_daily/vas/OBS6_ERA5_reanaly_1_day_vas_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc/diagnostic_daily/vas/OBS6_ERA5_reanaly_1_day_vas_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/rsds\n",
       "Creating preprocessor 'daily_radiation' task for variable 'rsds'\n",
       "Using input files for variable rsds of dataset ERA5:\n",
       "/home/sarah/temp/forcing/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_rsds_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/rsds created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210421_103459/preproc/diagnostic_daily/rsds/OBS6_ERA5_reanaly_1_day_rsds_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210422_065437/preproc/diagnostic_daily/rsds/OBS6_ERA5_reanaly_1_day_rsds_1990-1990.nc\n",
       "Creating diagnostic task diagnostic_daily/script\n",
-      "These tasks will be executed: diagnostic_daily/pr, diagnostic_daily/uas, diagnostic_daily/tasmin, diagnostic_daily/vas, diagnostic_daily/tdps, diagnostic_daily/script, diagnostic_daily/tasmax, diagnostic_daily/rsds, diagnostic_daily/tas\n",
+      "These tasks will be executed: diagnostic_daily/tasmin, diagnostic_daily/script, diagnostic_daily/rsds, diagnostic_daily/tasmax, diagnostic_daily/tdps, diagnostic_daily/tas, diagnostic_daily/vas, diagnostic_daily/pr, diagnostic_daily/uas\n",
       "Running 9 tasks sequentially\n",
-      "Starting task diagnostic_daily/pr in process [24446]\n"
+      "Starting task diagnostic_daily/pr in process [7798]\n",
+      "Successfully completed task diagnostic_daily/pr (priority 0) in 0:01:18.874032\n",
+      "Starting task diagnostic_daily/tas in process [7798]\n",
+      "Successfully completed task diagnostic_daily/tas (priority 1) in 0:01:14.932648\n",
+      "Starting task diagnostic_daily/tasmax in process [7798]\n",
+      "Successfully completed task diagnostic_daily/tasmax (priority 2) in 0:01:11.592593\n",
+      "Starting task diagnostic_daily/tasmin in process [7798]\n",
+      "Successfully completed task diagnostic_daily/tasmin (priority 3) in 0:01:11.413120\n",
+      "Starting task diagnostic_daily/tdps in process [7798]\n",
+      "Successfully completed task diagnostic_daily/tdps (priority 4) in 0:01:11.584929\n",
+      "Starting task diagnostic_daily/uas in process [7798]\n",
+      "Successfully completed task diagnostic_daily/uas (priority 5) in 0:01:11.912301\n",
+      "Starting task diagnostic_daily/vas in process [7798]\n",
+      "Successfully completed task diagnostic_daily/vas (priority 6) in 0:01:24.229364\n",
+      "Starting task diagnostic_daily/rsds in process [7798]\n",
+      "Successfully completed task diagnostic_daily/rsds (priority 7) in 0:02:28.687677\n",
+      "Starting task diagnostic_daily/script in process [7798]\n",
+      "Running command ['/home/sarah/anaconda3/envs/ewatercycle/bin/python', '/home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvaltool/diag_scripts/hydrology/lisflood.py', '/home/sarah/temp/output/recipe_lisflood_20210422_065437/run/diagnostic_daily/script/settings.yml']\n",
+      "Writing output to /home/sarah/temp/output/recipe_lisflood_20210422_065437/work/diagnostic_daily/script\n",
+      "Writing plots to /home/sarah/temp/output/recipe_lisflood_20210422_065437/plots/diagnostic_daily/script\n",
+      "Writing log to /home/sarah/temp/output/recipe_lisflood_20210422_065437/run/diagnostic_daily/script/log.txt\n",
+      "To re-run this diagnostic script, run:\n",
+      "cd /home/sarah/temp/output/recipe_lisflood_20210422_065437/run/diagnostic_daily/script; MPLBACKEND=\"Agg\" /home/sarah/anaconda3/envs/ewatercycle/bin/python /home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvaltool/diag_scripts/hydrology/lisflood.py /home/sarah/temp/output/recipe_lisflood_20210422_065437/run/diagnostic_daily/script/settings.yml\n",
+      "Maximum memory used (estimate): 0.2 GB\n",
+      "Sampled every second. It may be inaccurate if short but high spikes in memory consumption occur.\n",
+      "Successfully completed task diagnostic_daily/script (priority 8) in 0:00:08.854525\n"
      ]
     }
    ],
@@ -377,7 +402,7 @@
     "    dataset='ERA5', \n",
     "    startyear=1990, \n",
     "    endyear=1990, \n",
-    "    dem_file='wflow/wflow_dem.map',\n",
+    "    dem_file='Meuse/wflow_dem.map',\n",
     "    extract_region={\n",
     "            'start_longitude': 0,\n",
     "            'end_longitude': 6.75,\n",
