Add settings file to example repo

--- a/examples/Irrigation.ipynb
+++ b/examples/Irrigation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd14772e",
+   "id": "558aff58",
    "metadata": {},
    "source": [
     "# Brute force irrigation experiment\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "46a144c3",
+   "id": "13ec7ff7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb41695",
+   "id": "c5b16170",
    "metadata": {},
    "source": [
     "We will run 2 versions of the same model:\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4949444e",
+   "id": "9ece193f",
    "metadata": {},
    "source": [
     "We will set up the models with identical parameters and settings. We will use a standard dataset with global parameters on 5 and 30 minutes resolution."
@@ -51,17 +51,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "af413c05",
+   "id": "0887c5aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "input_data = \"/mnt/data/examples/technical_paper/pcr-globwb/input\"\n",
-    "settings_file = \"examples/merrimack_05min_era5.ini\""
+    "settings_file = \"examples/pcrglobwb_merrimack.ini\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ea051336",
+   "id": "9655cebc",
    "metadata": {},
    "source": [
     "In an earlier experiment we've established a river grid cell that corresponds closely to a GRDC station location. For now, we will use this index without further ado. Further down the notebook, we will show how we originally identified this point."
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3ec71303",
+   "id": "a2cc0dbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c25ed13",
+   "id": "c3a3253e",
    "metadata": {},
    "source": [
     "## Reference experiment\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "39a5f949",
+   "id": "e241d98b",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3276bfd9",
+   "id": "814df48c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f8adad7c",
+   "id": "c0418432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3b4d89de",
+   "id": "ec1687cd",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7b363850",
+   "id": "1cfa7675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c620e9a6",
+   "id": "99ae340c",
    "metadata": {},
    "source": [
     "### Intermediate insights\n",
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "105498cc",
+   "id": "7a844be2",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d1b99c7",
+   "id": "8617baa1",
    "metadata": {},
    "source": [
     "You can see that the model grid point we used is very close to the actual GRDC station, and indeed represents a cell that we would identify as a river. Below, we show how we identified that grid point. NB: this method is far from perfect, but is good enough for illustration. It only works after some spin-up time, which is why we couldn't do it before. "
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1b1d1a9b",
+   "id": "2115eebd",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77b43a71",
+   "id": "88a1d2e6",
    "metadata": {},
    "source": [
     "We can also have a quick look at the discharge timeseries we have tracked, to see if it makes any sense."
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "94b35624",
+   "id": "5e823555",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09f2d9c5",
+   "id": "f8f11ff0",
    "metadata": {},
    "source": [
     "## Running the irrigation experiment\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "784bea46",
+   "id": "05801c8a",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f19a5687",
+   "id": "3e56a913",
    "metadata": {},
    "source": [
     "From here on we will do exactly the same as before, except that we'll add three extra lines to overwrite soil moisture at every time step."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "99788958",
+   "id": "63a64636",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "85fc8b6f",
+   "id": "ff738751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b76432b0",
+   "id": "d2715223",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c94c86f6",
+   "id": "b0bd6886",
    "metadata": {},
    "outputs": [
     {
@@ -475,16 +475,17 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b1925d62",
+   "id": "b35810f0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Combine the instantaneous values of discharge into a single time series\n",
     "experiment_discharge = xr.concat(instantaneous_discharge_values, dim='time')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9d132a5a",
+   "id": "c788363d",
    "metadata": {},
    "source": [
     "## Final analysis"
@@ -493,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "0ba2d926",
+   "id": "6b108191",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "810bc56b",
+   "id": "83e6794e",
    "metadata": {},
    "source": [
     "## Clean up\n",
@@ -541,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "271c2a82",
+   "id": "d1de5906",
    "metadata": {},
    "outputs": [],
    "source": [
