small improvement to text

--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "To create a model instance, we need to select:\n",
     "- A model\n",
-    "- Forcing for this model\n",
+    "- Forcing (usually \n",
     "- Parameters for this model. Some models come with default parameters, most must be explicitly given a parameter set apon creation of an instance. Parameters can be overriden in the setup function.\n",
     "\n",
     "When creating a model instance, eWaterCycle will supply the following:\n",
