--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -28,9 +28,9 @@
     "## Ingredients of a model instance\n",
     "\n",
     "To create a model instance, we need to select:\n",
-    "- A model\n",
-    "- Forcing (usually \n",
-    "- Parameters for this model. Some models come with default parameters, most must be explicitly given a parameter set apon creation of an instance. Parameters can be overriden in the setup function.\n",
+    "- A model.\n",
+    "- Forcing (usually converted to a model specific format).\n",
+    "- Parameters for this model. Some models come with default parameters, most must be explicitly given a parameter set on creation of an instance. Parameters can be overriden in the setup function.\n",
     "\n",
     "When creating a model instance, eWaterCycle will supply the following:\n",
     "- A configuration file for the model. This is generated from a template for that specific model.\n",
@@ -159,12 +159,15 @@
     "forcing.plot()\n",
     "# some matplotlib output that shows the forcing\n",
     "\n",
+    "#optional\n",
     "forcing.interactive_plot()\n",
     "#some geoviews/widget/thingy that shows the forcing\n",
     "\n",
+    "#optional\n",
     "forcing.log\n",
     "# show some info on how this was generated (the esmvaltool log?)\n",
     "\n",
+    "#optional\n",
     "forcing.recipe\n",
     "# the esmvaltool recipe, to inspect what was done in the end."
    ]
