mark some more items as optional

--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -156,6 +156,7 @@
     "forcing.shape\n",
     "# Shape()\n",
     "\n",
+    "#optional\n",
     "forcing.plot()\n",
     "# some matplotlib output that shows the forcing\n",
     "\n",
